fix cropped status text

--- a/cmd/aurelius/static/css/db-dir.css
+++ b/cmd/aurelius/static/css/db-dir.css
@@ -63,10 +63,18 @@ body .material-icons {
 	margin-left: 1em;
 	text-align: left;
 }
-#status-right-container {
-	overflow: hidden;
+#status-right-spacer {
+	position: relative;
 	flex-grow: 1;
 	margin: 0 .5em 0 .5em;
+}
+#status-right-container {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 200%;
+	overflow: hidden;
 }
 #status-right {
 	max-width: 100%;
